--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
         </style>
     </head>
     <div id="gameBox" style="margin: 0px;"></div>
-    <script src="script.js"></script>
+    <script src="/js2/script.js"></script>
 </html>
 
  <!-- margin: 0 auto-->
